gcc/testsuite/gfortran.dg/pr95586_1.f90
! { dg-do compile }
!

program test
  implicit type(t) (1)  ! { dg-error "Syntax error" }
  type t
  end type
end program

